@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2013-11-06 r64163) -- "Unsuffered Consequences"
+R Under development (unstable) (2013-11-12 r64206) -- "Unsuffered Consequences"
 Copyright (C) 2013 The R Foundation for Statistical Computing
 Platform: x86_64-unknown-linux-gnu (64-bit)
 
@@ -682,7 +682,7 @@ Error in editDLfromGPath(gPath, specs, strict, grep, global, redraw) :
 > ### Name: grid.force
 > ### Title: Force a grob into its components
 > ### Aliases: grid.force grid.force.default grid.force.gPath grid.force.grob
-> ###   grid.revert grid.revert.gPath grid.revert.grob
+> ###   forceGrob grid.revert grid.revert.gPath grid.revert.grob
 > ### Keywords: dplot
 > 
 > ### ** Examples
@@ -2050,7 +2050,7 @@ vp1::vp2
 > ###
 > options(digits = 7L)
 > base::cat("Time elapsed: ", proc.time() - base::get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  1.266 0.015 1.287 0 0 
+Time elapsed:  1.432 0.016 1.449 0 0 
 > grDevices::dev.off()
 null device 
           1 
