@@ -35,6 +35,8 @@ Changes from grid_3.0.* to grid_3.1.0:
     vpPath (which can produce a down viewport of greater depth than
     the depth of the vpPath).
 
+11. Exported generic forceGrob().
+
 
 Changes from grid_3.0.0 to grid_3.0.1:
 -------------------------------------
